--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,11 @@
         <!-- https://mvnrepository.com/artifact/com.zenjava/javafx-maven-plugin -->
 
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
     </dependencies>
 
 
